# GASBAG

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  co2_template.ini  desktop_oco3.ini  desktop_test.ini  docker-compose.yml  greg_l1b_test.ini  oco2_sif.ini  oco2_slurm_test.sh  oco2_template.ini  test.ini  test_ocomaster.ini  xrtm_test.ini
cmake/modules/: FindNETCDF.cmake
doc/doxygen/: doxygen_config
gdoc/: create_control_files.py  driver.sh  insert_ratios_driver.sh  template_control.ini
src/: GASBAG_main.f90  GeoCARBSIF_main.f90
src/absco/: ABSCO.f90
src/cli_config/: Startup.F90  Startup.f90
src/control/: Control.f90
src/forward_models/: guanter_model.f90  physical_model.f90  physical_model_addon.f90
src/instruments/: Instruments.f90
src/instruments/oco2/: OCO2_Instrument.f90
src/parameters/: Keywords.f90  Version.F90.in  Version.f90.in
src/physics/: Aerosols.f90  Beer_Lambert.f90  Gas_tau.f90  PCART.f90  Radiance.f90  Rayleigh.f90  Rayleigh_tau.f90  Scene.f90  Smart_scale_factor_guess.f90  Solar_model.f90  XRTM.f90
src/retrieval/: Jacobians.f90  Statevector.f90  perform_retrievals.f90
src/spectroscopy/: ABSCO.f90  Spectroscopy_utils.f90
src/utils/: File_Utils.f90  Fini_extract.inc  HDF5_write_DP_array.inc  HDF5_write_INT_array.inc  Math_Utils.f90  Misc_Utils.f90
tools/: Calculate_expected_delta_tau.py  Calibrate_SIF.py  Check_Result.py  Check_SIF_geocarb.py  Check_baseline_SIF.py  Compare_vs_scene_truth.py  Compare_with_IDP.py  Compare_with_IDP_v2.py  ExtractBasisFunctions.py  GASBAG_LtSIF_creator.py  Generate_H2O_covariance.py  Insert_ratios.py  SECM_CO2_2018.py  Screening_analysis.py  fullaband.txt  jdutil.py  l1b.list  l1bND.list  oco3.list  one.list  sun_2006_ephimeris.txt  sun_2018_ephimeris.txt  sun_calculate.py  sun_ephem.txt  window757.txt  window771.txt
